--- a/OpticalValleyUnite/Classes/UI/EquipmentRoom/View/YQEquipHomeListCell.xib
+++ b/OpticalValleyUnite/Classes/UI/EquipmentRoom/View/YQEquipHomeListCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="135" id="KGk-i7-Jjw" customClass="YQEquipHomeListCell" customModule="OpticalValleyUnite" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EquipHomeListCell" rowHeight="135" id="KGk-i7-Jjw" customClass="YQEquipHomeListCell" customModule="OpticalValleyUnite" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="386" height="135"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -29,7 +29,7 @@
                     </textView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j3G-dp-EvG" customClass="ShowImageView" customModule="OpticalValleyUnite" customModuleProvider="target">
                         <rect key="frame" x="5" y="5" width="80" height="80"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="80" id="J2O-Zo-ZPQ"/>
                             <constraint firstAttribute="height" constant="80" id="gst-gp-5mC"/>
