--- a/OpticalValleyUnite/Classes/UI/EquipmentRoom/ViewController/YQEquipmentList.storyboard
+++ b/OpticalValleyUnite/Classes/UI/EquipmentRoom/ViewController/YQEquipmentList.storyboard
@@ -113,6 +113,10 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="DfI-EO-euk">
                                 <rect key="frame" x="0.0" y="90" width="375" height="577"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="fS9-wh-IVG" id="pd6-Px-1KF"/>
+                                    <outlet property="delegate" destination="fS9-wh-IVG" id="OEt-gD-MFI"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
@@ -130,6 +134,7 @@
                         <outlet property="imageView" destination="Bh5-g6-3oB" id="NjV-fA-JME"/>
                         <outlet property="searchTextField" destination="5BI-hO-x1p" id="Qxj-Qe-N6I"/>
                         <outlet property="siftView" destination="ANr-dG-fxp" id="n03-W5-BO3"/>
+                        <outlet property="tableView" destination="DfI-EO-euk" id="WN0-YV-acd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="55P-If-5ev" userLabel="First Responder" sceneMemberID="firstResponder"/>
