--- a/OpticalValleyUnite/Classes/UI/HouseQuery/View/YQEquipmentListCell.xib
+++ b/OpticalValleyUnite/Classes/UI/HouseQuery/View/YQEquipmentListCell.xib
@@ -11,24 +11,33 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EquipmentListCell" rowHeight="115" id="KGk-i7-Jjw" customClass="YQEquipmentListCell" customModule="OpticalValleyUnite" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="347" height="115"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EquipmentListCell" rowHeight="178" id="KGk-i7-Jjw" customClass="YQEquipmentListCell" customModule="OpticalValleyUnite" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="349" height="178"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="347" height="114.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="349" height="177.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XW7-P2-gaT">
-                        <rect key="frame" x="0.0" y="0.0" width="347" height="40"/>
+                        <rect key="frame" x="0.0" y="0.0" width="349" height="100"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XnI-70-KDY">
-                                <rect key="frame" x="10" y="9" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XnI-70-KDY">
+                                <rect key="frame" x="10" y="10" width="334" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4lT-3d-BNO">
-                                <rect key="frame" x="57" y="9" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4lT-3d-BNO">
+                                <rect key="frame" x="89" y="40" width="255" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="设备编号:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GVc-M8-RM7">
+                                <rect key="frame" x="10" y="38" width="74" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="74" id="Yd2-EU-2r6"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -36,41 +45,45 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="40" id="7Cj-7b-ByS"/>
+                            <constraint firstItem="GVc-M8-RM7" firstAttribute="top" secondItem="XnI-70-KDY" secondAttribute="bottom" constant="10" id="4Gy-3r-urn"/>
+                            <constraint firstAttribute="height" constant="100" id="7Cj-7b-ByS"/>
                             <constraint firstItem="XnI-70-KDY" firstAttribute="leading" secondItem="XW7-P2-gaT" secondAttribute="leading" constant="10" id="SjP-tO-m4r"/>
-                            <constraint firstItem="4lT-3d-BNO" firstAttribute="leading" secondItem="XnI-70-KDY" secondAttribute="trailing" constant="5" id="Yce-FQ-yvZ"/>
-                            <constraint firstItem="XnI-70-KDY" firstAttribute="centerY" secondItem="XW7-P2-gaT" secondAttribute="centerY" id="d6e-Rh-eD1"/>
-                            <constraint firstItem="4lT-3d-BNO" firstAttribute="centerY" secondItem="XW7-P2-gaT" secondAttribute="centerY" id="obn-dy-T7b"/>
+                            <constraint firstItem="4lT-3d-BNO" firstAttribute="leading" secondItem="GVc-M8-RM7" secondAttribute="trailing" constant="5" id="dKY-1z-pgR"/>
+                            <constraint firstItem="4lT-3d-BNO" firstAttribute="centerY" secondItem="GVc-M8-RM7" secondAttribute="centerY" id="eGm-X9-S2y"/>
+                            <constraint firstAttribute="trailing" secondItem="XnI-70-KDY" secondAttribute="trailing" constant="5" id="haZ-BZ-2Qp"/>
+                            <constraint firstItem="GVc-M8-RM7" firstAttribute="leading" secondItem="XnI-70-KDY" secondAttribute="leading" id="pL2-90-B4x"/>
+                            <constraint firstAttribute="trailing" secondItem="4lT-3d-BNO" secondAttribute="trailing" constant="5" id="pq0-ep-2R9"/>
+                            <constraint firstItem="XnI-70-KDY" firstAttribute="top" secondItem="XW7-P2-gaT" secondAttribute="top" constant="10" id="rn9-gz-ZQm"/>
                         </constraints>
                     </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CeL-3x-MvL">
-                        <rect key="frame" x="8" y="40" width="331" height="1"/>
+                        <rect key="frame" x="8" y="100" width="333" height="1"/>
                         <color key="backgroundColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="gpv-YF-kLS"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="设备分类:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oYR-Hi-C3n">
-                        <rect key="frame" x="10" y="51" width="74" height="21"/>
+                        <rect key="frame" x="10" y="111" width="74" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="设备状态:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xe0-8y-F73">
-                        <rect key="frame" x="10" y="82" width="74" height="21"/>
+                        <rect key="frame" x="10" y="142" width="74" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hhy-br-8d8">
-                        <rect key="frame" x="89" y="51" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="89" y="114" width="33" height="16"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qzt-ZZ-gcH">
-                        <rect key="frame" x="89" y="82" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="89" y="145" width="33" height="16"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -98,7 +111,7 @@
                 <outlet property="equipmentNum" destination="4lT-3d-BNO" id="bZ5-qJ-CjO"/>
                 <outlet property="equpmentState" destination="qzt-ZZ-gcH" id="Sqx-XX-YJS"/>
             </connections>
-            <point key="canvasLocation" x="53.5" y="87.5"/>
+            <point key="canvasLocation" x="-43" y="47"/>
         </tableViewCell>
     </objects>
 </document>
