--- a/OpticalValleyUnite/Classes/UI/EquipmentRoom/View/YQEquipHomeListCell.xib
+++ b/OpticalValleyUnite/Classes/UI/EquipmentRoom/View/YQEquipHomeListCell.xib
@@ -18,15 +18,6 @@
                 <rect key="frame" x="0.0" y="0.0" width="386" height="134.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="POq-gv-Nmz">
-                        <rect key="frame" x="90" y="5" width="291" height="50"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="50" id="uGo-Rc-XIt"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                    </textView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j3G-dp-EvG" customClass="ShowImageView" customModule="OpticalValleyUnite" customModuleProvider="target">
                         <rect key="frame" x="5" y="5" width="80" height="80"/>
                         <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
@@ -35,17 +26,23 @@
                             <constraint firstAttribute="height" constant="80" id="gst-gp-5mC"/>
                         </constraints>
                     </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wSQ-75-YcW">
+                        <rect key="frame" x="90" y="5" width="291" height="16"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="POq-gv-Nmz" firstAttribute="leading" secondItem="j3G-dp-EvG" secondAttribute="trailing" constant="5" id="Cok-Ce-Ug2"/>
-                    <constraint firstAttribute="trailing" secondItem="POq-gv-Nmz" secondAttribute="trailing" constant="5" id="S8Z-8F-gxJ"/>
+                    <constraint firstAttribute="trailing" secondItem="wSQ-75-YcW" secondAttribute="trailing" constant="5" id="8op-eb-kMO"/>
+                    <constraint firstItem="wSQ-75-YcW" firstAttribute="top" secondItem="j3G-dp-EvG" secondAttribute="top" id="UBS-JD-G7K"/>
                     <constraint firstItem="j3G-dp-EvG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="eZf-U7-mnW"/>
-                    <constraint firstItem="POq-gv-Nmz" firstAttribute="top" secondItem="j3G-dp-EvG" secondAttribute="top" id="mdk-oQ-U4Q"/>
                     <constraint firstItem="j3G-dp-EvG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="qDF-le-YSu"/>
+                    <constraint firstItem="wSQ-75-YcW" firstAttribute="leading" secondItem="j3G-dp-EvG" secondAttribute="trailing" constant="5" id="sSb-JB-GDc"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="showContentView" destination="POq-gv-Nmz" id="9iU-hW-BIU"/>
+                <outlet property="showContentView" destination="wSQ-75-YcW" id="VPG-pk-6sc"/>
                 <outlet property="showImageView" destination="j3G-dp-EvG" id="cLB-76-AtX"/>
             </connections>
             <point key="canvasLocation" x="38" y="281.5"/>
