--- a/OpticalValleyUnite/Classes/UI/DecorationAdmin/ViewController/YQDecorationScreenVC.xib
+++ b/OpticalValleyUnite/Classes/UI/DecorationAdmin/ViewController/YQDecorationScreenVC.xib
@@ -42,7 +42,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FZm-s0-BeK">
                     <rect key="frame" x="0.0" y="108" width="375" height="80"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hJC-a9-Y1K">
+                        <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hJC-a9-Y1K">
                             <rect key="frame" x="40" y="25" width="80" height="30"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
@@ -67,7 +67,7 @@
                                 <action selector="decorationButtonSelect:" destination="-1" eventType="touchUpInside" id="cHi-jv-4XG"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ahq-CM-3hC">
+                        <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ahq-CM-3hC">
                             <rect key="frame" x="255" y="25" width="80" height="30"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
